--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Splash">
+        <activity android:name=".Splash" android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
