ListView'as done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Final">
-        <activity android:name=".Splash" android:theme="@style/FullScreen" >
-
+        <activity
+            android:name=".Splash"
+            android:theme="@style/FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".mainas" android:theme="@style/Final"/>
-        <activity android:name=".Main" android:theme="@style/FullScreen"></activity>
+        <activity
+            android:name=".mainas"
+            android:theme="@style/Final" />
+        <activity
+            android:name=".Main"
+            android:theme="@style/FullScreen" />
+        <activity android:name=".JustMe" />
+        <activity android:name=".Me1" />
+        <activity android:name=".Me3"></activity>
     </application>
 
 </manifest>
